--- a/app/index.html
+++ b/app/index.html
@@ -4,28 +4,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
+    <title>Welcome to CMU</title>
+    <!-- Bulma CSS Framework -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Courier New', Courier, monospace;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f4f4f4;
-            color: #333;
+            font-family: 'Montserrat', sans-serif;
         }
 
-        h1 {
-            font-size: 2rem;
-            text-align: center;
+        .hero.is-primary {
+            background: linear-gradient(135deg, #C41230 0%, #a00c24 100%);
+            /* CMU Red-ish gradient */
         }
     </style>
 </head>
 
 <body>
-    <h1>Carnegie Mellon University</h1>
+    <section class="hero is-primary is-fullheight">
+        <div class="hero-body">
+            <div class="container has-text-centered">
+                <h1 class="title is-1 is-size-1-mobile">
+                    Welcome to
+                </h1>
+                <h2 class="subtitle is-3 is-size-4-mobile">
+                    Carnegie Mellon University
+                </h2>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
