--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,7 @@
                 <h2 class="title is-3 is-size-4-mobile">
                     Carnegie Mellon University
                 </h2>
+                <h1>Deloyedd...</h1>
             </div>
         </div>
     </section>
